# Arabic_NLP_Project_CLi

./: .gitignore  README.md  main.py  pyproject.toml
utils/: arabic_text.py  data_handler.py  embedding.py  reporting.py  training.py  visualization.py
