[project]
name = "nlp-cli"
version = "0.1.0"
description = "Arabic NLP CLI Pipeline (EDA, Preprocessing, Embeddings, Training)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # CLI
    "click>=8.1",
    # Data handling
    "pandas>=2.0",
    "numpy>=1.24",
    # EDA & visualization
    "matplotlib>=3.7",
    # ML & evaluation
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "joblib>=1.3",
    # Embeddings
    "model2vec>=0.2.0",
    "nltk>=3.8"
]